# sala

./: Cargo.toml
.github/workflows/: devcontainer-smoke.yml
crates/sala_devtools/: CLI_API.md  Cargo.toml  Makefile  build.rs
crates/sala_devtools/src/: cli.rs  dc_build.rs  dc_connect.rs  devcontainer_doctor.rs  devcontainer_status.rs  ipc.rs  main.rs  sala_devtools.rs  schemas.rs
crates/sala_hud/: Cargo.toml  README.md  build.rs
crates/sala_hud/proto/: devcontainer.proto
crates/sala_hud/src/: devcontainer_hud.rs  gui.rs  sala_hud.rs
crates/zed/: Cargo.toml
crates/zed/src/: zed.rs
