[package]
name = "sala_devtools"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "devcontainer_smoke_test"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
hyper.workspace = true
prost.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true

[build-dependencies]
tonic-build.workspace = true
