[package]
name = "sala_devtools"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[[bin]]
name = "devcontainer_smoke_test"
path = "src/main.rs"

[[bin]]
name = "devcontainer_status"
path = "src/devcontainer_status.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
hyper.workspace = true
prost.workspace = true
sala_hud = { path = "../sala_hud", default-features = false }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tonic.workspace = true
tower.workspace = true

[build-dependencies]
tonic-build.workspace = true
